--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-
+    <!-- <script src="https://kit.fontawesome.com/c15b6a3f08.js"></script> -->
     <title>Todo App</title>
   </head>
   <body>
